--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+# ------------------------------------------
 # Miscellaneous
+# ------------------------------------------
 *.class
 *.log
 *.pyc
 *.swp
+*.tmp
+*.bak
 .DS_Store
+
 .atom/
 .build/
 .buildlog/
@@ -12,34 +17,72 @@
 .swiftpm/
 migrate_working_dir/
 
-# IntelliJ related
+# ------------------------------------------
+# IDEs
+# ------------------------------------------
+.idea/
 *.iml
 *.ipr
 *.iws
-.idea/
+.vscode/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# ------------------------------------------
+# Flutter / Dart / Pub
+# ------------------------------------------
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
+.packages
 /build/
+**/doc/api/
+**/ios/Flutter/.last_build_id
 
-# Symbolication related
+pubspec.lock
+windows/flutter/generated_plugins.cmake
+windows/flutter/generated_plugin_registrant.cc
+macos/Flutter/GeneratedPluginRegistrant.swift
+
+# ------------------------------------------
+# Flutter-generated plugin registrants
+# These are auto-generated and should not be committed
+# ------------------------------------------
+**/generated_plugin_registrant.cc
+**/generated_plugin_registrant.h
+**/generated_plugins.cmake
+**/GeneratedPluginRegistrant.swift
+
+# ------------------------------------------
+# Platform-specific build artifacts
+# ------------------------------------------
+
+# Android
+android/.gradle/
+android/app/debug/
+android/app/profile/
+android/app/release/
+android/local.properties
+
+# iOS
+ios/Flutter/ephemeral/
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Runner.xcworkspace/
+ios/Pods/
+ios/build/
+
+# macOS
+macos/Flutter/ephemeral/
+
+# Windows
+windows/flutter/ephemeral/
+
+# Linux
+linux/flutter/ephemeral/
+
+# ------------------------------------------
+# Obfuscation and Symbolication
+# ------------------------------------------
 app.*.symbols
-
-# Obfuscation related
 app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
