--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,7 +39,13 @@ dependencies:
   collection: ^1.19.0
   auto_size_text: ^3.0.0
   carousel_slider: ^5.0.0
-  camera: ^0.11.1
+  xml: ^6.5.0
+  video_player: ^2.8.2
+  camera: 0.10.5+5
+  flutter_tts: ^4.2.3
+  mobile_scanner: ^7.0.1
+  speech_to_text: ^7.0.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
@@ -56,11 +63,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  
   uses-material-design: true
+  assets:
+    - assets/resources/images/
+    - assets/resources/video/
+    - assets/config/  # XML-Dateien kommen in diesen Ordner
 
   # To add assets to your application, add an assets section, like this:
   # assets:
