--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +45,11 @@ dependencies:
   mobile_scanner: ^7.0.1
   speech_to_text: ^7.0.0
   permission_handler: ^11.3.0
+  path_provider: ^2.0.11
+  media_scanner: ^2.0.0
+  path: ^1.8.0
+  image: ^4.1.3
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +73,8 @@ flutter:
     - assets/resources/images/
     - assets/resources/video/
     - assets/config/  # XML-Dateien kommen in diesen Ordner
+    - assets/resources/sounds/success_sound.mp3
+    - assets/resources/sounds/camera_sound.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
